--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,11 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+fragmenter/assets/
+fragmenter/localenv/
+neural-network/assetss/
+neural-network/localenv/
+visualizer/assets/
+visualizer/data_set_*/
+visualizer/localenv/
